# pipecat-deepfilternet-stream

./: .gitignore  CLAUDE.md  MEDIUM.md  README.md  pyproject.toml
.github/workflows/: build-deepfilterlib.yml
benchmarks/: README.md  benchmark.py  fetch_voicebank_demand.py  results.md
examples/: denoise_wav.py  process_directory.py
src/pipecat_deepfilternet_stream/: __init__.py  engine.py  filter.py
tests/: test_engine.py
